fixed tab-content overflow

--- a/front-end/_main.css
+++ b/front-end/_main.css
@@ -250,6 +250,8 @@ a:hover,a:focus,a:active{
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 	text-align: center;
+	max-height: 450px;
+	overflow: auto;
 }
 
 .alert {
